--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,17 +1,15 @@
 .NavBar {
     background-color: rgb(48, 48, 48);
-    width: 100vw;
+    width: 100%;
     position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-    padding: 10px 10px;
+    padding: 10px 15px;
     display: flex;
     justify-content: center;
 }
 
 .NavBarContainer {
+    width: 100%;
+    max-width: 1200px;
     display: flex;
     justify-content: space-between;
 }
@@ -28,6 +26,15 @@
     width: 150px;
     height: 43px;
     object-fit: cover;
+}
+
+.activeNavButton {
+    color: gray;
+    text-decoration: line-through 1px;
+}
+
+.activeNavButton:hover {
+    text-decoration: none;
 }
 
 @media screen and (min-width: 600px) {
