--- a/src/components/NotFound.css
+++ b/src/components/NotFound.css
@@ -1,16 +1,15 @@
-.container {
+.nFContainer {
     width: 100%;
     max-width: 1200px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     gap: 25px;
-    flex-wrap: wrap;
     padding: 0 10px;
 }
 
-.mainContainer {
+.nFMainContainer {
     display: flex;
-    flex-grow: 1;
     width: 100%;
     justify-content: center;
+    margin: 20px 0;
 }
