--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,22 @@
 }
 
 body {
-  padding: 0 10px 10px 10px;
   font-family: 'Raleway', sans-serif;
-  background-color: rgb(243, 243, 243);
+  background-color: #f5f5f5;
 }
 
 a{
   text-decoration: none;
+  color: black;
 }
 
 .container {
   width: 100%;
   max-width: 1200px;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
 }
