--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -1,5 +1,4 @@
 .spinnerContainer {
-/*     position: absolute; */
     width: 100%;
     top: 0;
     left: 0;
@@ -8,6 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .spinner {
